tests/ui/recursion/recursion_limit/invalid_macro.stderr
error: attribute value must be a literal
  --> $DIR/invalid_macro.rs:1:22
   |
LL | #![recursion_limit = foo!()]
   |                      ^^^^^^

error: aborting due to 1 previous error

